--- a/.gitignore
+++ b/.gitignore
@@ -22,3 +22,7 @@ dist-ssr
 *.njsproj
 *.sln
 *.sw?
+
+# Firebase service account keys (NEVER commit these!)
+serviceAccountKey.json
+**/serviceAccountKey.json
