--- a/.github/workflows/floodDetectJob.yml
+++ b/.github/workflows/floodDetectJob.yml
@@ -24,5 +24,8 @@ jobs:
         if [ -f requirements.txt ]; then pip install -r requirements.txt; fi
 
     - name: Run analysis
+      env:
+        FIREBASE_KEY: ${{ secrets.FIREBASE_KEY }}
       run: |
-        python analysis_firebase.py
+        python analysis_firebase_detailed.py
+
