--- a/.github/workflows/log_sensor_data.yml
+++ b/.github/workflows/log_sensor_data.yml
@@ -35,6 +35,6 @@ jobs:
       run: |
         git config --global user.name 'github-actions[bot]'
         git config --global user.email 'github-actions[bot]@users.noreply.github.com'
-        git add sensor_data.csv
+        git add public/sensor_data.csv
         # Only commit if there are changes
         git diff --quiet && git diff --staged --quiet || (git commit -m "Update sensor data [skip ci]" && git push)
