--- a/.github/workflows/floodDetectJob.yml
+++ b/.github/workflows/floodDetectJob.yml
@@ -8,6 +8,8 @@ on:
 jobs:
   run-python:
     runs-on: ubuntu-latest
+    permissions:
+      contents: write
 
     steps:
     - name: Checkout repository
