--- a/.github/workflows/deploy.yml
+++ b/.github/workflows/deploy.yml
@@ -28,6 +28,14 @@ jobs:
           
       - name: Install dependencies
         run: npm ci
+
+      - name: Set up Python
+        uses: actions/setup-python@v4
+        with:
+          python-version: '3.11'
+
+      - name: Generate waste history file
+        run: python SensorDataMLAnalysis/archive_waste_history.py
         
       - name: Build
         run: npm run build
