--- a/.github/workflows/log_sensor_data.yml
+++ b/.github/workflows/log_sensor_data.yml
@@ -38,4 +38,4 @@ jobs:
         git config --global user.email 'github-actions[bot]@users.noreply.github.com'
         git add public/sensor_data.csv public/detected_waste_photos/waste_history.json
         # Only commit if there are changes
-        git diff --quiet && git diff --staged --quiet || (git commit -m "Update sensor data and waste history [skip ci]" && git push)
+        git diff --quiet && git diff --staged --quiet || (git commit -m "Update sensor data and waste history [skip ci]" && git pull --rebase origin main && git push)
